@@ -128,8 +128,15 @@ ATTR_VALUE = "value"
 ATTR_VALUE_KEY = "valueKey"
 ATTR_VERIFY_TLS = "verify_tls"
 
+PROGRAM_ID = "id"
+PROGRAM_NAME = "name"
+PROGRAM_ISACTIVE = "isActive"
+PROGRAM_ISINTERNAL = "isInternal"
+PROGRAM_LASTEXECUTETIME = "lastExecuteTime"
+
 SYSVAR_HASEXTMARKER = "hasExtMarker"
 SYSVAR_ID = "id"
+SYSVAR_ISINTERNAL = "isInternal"
 SYSVAR_MAX_VALUE = "maxValue"
 SYSVAR_MIN_VALUE = "minValue"
 SYSVAR_NAME = "name"
