@@ -5,11 +5,13 @@ button platform (https://www.home-assistant.io/integrations/button/).
 from __future__ import annotations
 
 import logging
-from typing import Any
+from typing import Any, Final
 
+import hahomematic.central_unit as hm_central
 from hahomematic.const import HmPlatform
 import hahomematic.device as hm_device
-from hahomematic.entity import GenericEntity
+from hahomematic.entity import GenericEntity, GenericHubEntity
+from hahomematic.helpers import ProgramData
 
 _LOGGER = logging.getLogger(__name__)
 
@@ -42,3 +44,46 @@ class HmButton(GenericEntity[None]):
     async def press(self) -> None:
         """Handle the button press."""
         await self.send_value(True)
+
+
+class HmProgramButton(GenericHubEntity):
+    """Class for a homematic program button."""
+
+    def __init__(
+        self,
+        central: hm_central.CentralUnit,
+        data: ProgramData,
+    ):
+        """
+        Initialize the entity.
+        """
+        super().__init__(central=central, data=data, platform=HmPlatform.HUB_BUTTON)
+        self.pid: Final[str] = data.pid
+        self.ccu_program_name: Final[str] = data.name
+        self.is_active: bool = data.is_active
+        self.is_internal: bool = data.is_internal
+        self.last_execute_time: str = data.last_execute_time
+
+    @property
+    def available(self) -> bool:
+        """Return the availability of the device."""
+        return self.is_active
+
+    def update_data(self, data: ProgramData) -> None:
+        """Set variable value on CCU/Homegear."""
+        do_update: bool = False
+        if self.is_active != data.is_active:
+            self.is_active = data.is_active
+            do_update = True
+        if self.is_internal != data.is_internal:
+            self.is_internal = data.is_internal
+            do_update = True
+        if self.last_execute_time != data.last_execute_time:
+            self.last_execute_time = data.last_execute_time
+            do_update = True
+        if do_update:
+            self.update_entity()
+
+    async def press(self) -> None:
+        """Handle the button press."""
+        await self.central.execute_program(pid=self.pid)
